# WildlifeMonitor

./: .gitignore  README.md  pyproject.toml  setup.sh
frontend/app/: page.tsx
src/: api.py  clean.py  wildlife_monitor.py
src/analyse/: analysis_layer.py  event.py  snapshot.py
src/detection/: audio_environment.py  custom_botsort.yaml  detection_unit.py  detector.py  environment.py  parallel_detection.py  species.py
src/detection/util/: annotate.py  tracking_smoother.py
src/fusion/: temporal_fusion.py
src/ingest/: ingester.py
src/sources/: download.py  fetch_base.py  youtube.py
test/detection/: detection_test.py  detection_test_audio.py
test/extraction/: youtube_test.sh
test/fusion/: fusion_test.py
test/ingestion/: ingester.py
test/pipeline/: pipeline_test.py
