[project]
name = "Wildlife_monitor"
version = "0.1.0"
dependencies = [
    "numpy",
    "av",
    "yt-dlp",
    "ultralytics",
    "tabulate",
    "torchaudio",
    "transformers",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]