[project]
name = "Wildlife_monitor"
version = "0.1.0"
dependencies = [
    "numpy",
    "av",
    "yt-dlp",
    "ultralytics",
    "tabulate",
    "torch",
    "torchaudio",
    "transformers",
    "open_clip_torch",
    "fastapi",
    "uvicorn",
    "Pillow",
    "python-multipart",
    "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]